# slurm-atlas-plugin

./: Makefile.in  README.en.md  README.md  aclocal.m4  config.h.in  configure  configure.ac  slurm.spec
auxdir/: Makefile.am  Makefile.in  x_ac_dsmi.m4
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/nss_slurm/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/pmi/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in
slurm/: slurm.h.in
src/: Makefile.in
src/api/: Makefile.in
src/bcast/: Makefile.in
src/common/: Makefile.am  Makefile.in  gres.c  gres.h  npu.c  npu.h  slurm_opt.c  slurm_opt.h  slurm_protocol_api.c  slurm_protocol_api.h
src/database/: Makefile.in
src/layouts/: Makefile.in
src/lua/: Makefile.in
src/plugins/: Makefile.am  Makefile.in
src/plugins/npu/generic/: Makefile.am  Makefile.in  npu_generic.c
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in  opt.c  salloc.c
src/sattach/: Makefile.in
src/sbatch/: Makefile.in  opt.c  sbatch.c
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
testsuite/: Makefile.in
(+195 files in other folders)
